--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="icon" href="./favicon.ico" type="image/x-icon">
+        <meta name="google-site-verification" content="kjV0bAjOmYliNutW_vKZ7Kv6e0bt9xjPxbhh3Mfp-ck" />
         <title>Particules 3D</title>
         <style>body {margin: 0;overflow: hidden;}</style>
     </head>
